--- a/.travis.yml
+++ b/.travis.yml
@@ -20,57 +20,57 @@ matrix:
     # GCC 7
     - env: CC=gcc-7 CXX=g++-7 BUILD_TYPE=Debug
       addons: { apt: { 
-        sources: [ "ubuntu-toolchain-r-test", { sourceline: "ppa:rakhimov/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
-        packages: [ "lynx", "ccache", "libstdc++-7-dev", "libboost1.61-all-dev" , "gcc-7", "g++-7" ]
+        sources: [ "ubuntu-toolchain-r-test", { sourceline: "ppa:dluxen/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
+        packages: [ "lynx", "ccache", "libstdc++-7-dev", "libboost1.67-all-dev" , "gcc-7", "g++-7" ]
       } }
 
     # GCC 8
     - env: CC=gcc-8 CXX=g++-8 BUILD_TYPE=Debug
       addons: { apt: { 
-        sources: [ "ubuntu-toolchain-r-test", { sourceline: "ppa:rakhimov/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
-        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.61-all-dev", "gcc-8", "g++-8" ]
+        sources: [ "ubuntu-toolchain-r-test", { sourceline: "ppa:dluxen/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
+        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.67-all-dev", "gcc-8", "g++-8" ]
       } }
 
     # Clang 6.0
     - env: CC=clang-6.0 CXX=clang++-6.0 BUILD_TYPE=Debug
       addons: { apt: { 
-        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0", { sourceline: "ppa:rakhimov/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
-        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.61-all-dev", "clang-6.0" ]
+        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0", { sourceline: "ppa:dluxen/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
+        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.67-all-dev", "clang-6.0" ]
       } }
 
 #    # Clang 7.0
 #    - env: CC=clang-7.0 CXX=clang++-7.0 BUILD_TYPE=Debug
 #      addons: { apt: { 
-#        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7.0", { sourceline: "ppa:rakhimov/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
-#        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.61-all-dev", "clang-7.0" ]
+#        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-7.0", { sourceline: "ppa:dluxen/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
+#        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.67-all-dev", "clang-7.0" ]
 #      } }
 
     # Debug
     - env: CC=clang-6.0 CXX=clang++-6.0 BUILD_TYPE=Debug
       addons: { apt: { 
-        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0", { sourceline: "ppa:rakhimov/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
-        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.61-all-dev", "clang-6.0" ]
+        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0", { sourceline: "ppa:dluxen/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
+        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.67-all-dev", "clang-6.0" ]
       } }
 
     # MinSizeRel
     - env: CC=clang-6.0 CXX=clang++-6.0 BUILD_TYPE=MinSizeRel
       addons: { apt: { 
-        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0", { sourceline: "ppa:rakhimov/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
-        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.61-all-dev", "clang-6.0" ]
+        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0", { sourceline: "ppa:dluxen/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
+        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.67-all-dev", "clang-6.0" ]
       } }
 
     # RelWithDebInfo
     - env: CC=clang-6.0 CXX=clang++-6.0 BUILD_TYPE=RelWithDebInfo
       addons: { apt: { 
-        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0", { sourceline: "ppa:rakhimov/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
-        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.61-all-dev", "clang-6.0" ]
+        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0", { sourceline: "ppa:dluxen/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
+        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.67-all-dev", "clang-6.0" ]
       } }
 
     # Release
     - env: CC=clang-6.0 CXX=clang++-6.0 BUILD_TYPE=Release
       addons: { apt: { 
-        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0", { sourceline: "ppa:rakhimov/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
-        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.61-all-dev", "clang-6.0" ]
+        sources: [ "ubuntu-toolchain-r-test", "llvm-toolchain-trusty-6.0", { sourceline: "ppa:dluxen/boost" }, { sourceline: "ppa:dzombie/ccache" } ],
+        packages: [ "lynx", "ccache", "libstdc++-8-dev", "libboost1.67-all-dev", "clang-6.0" ]
       } }
 
 install:
