--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,8 @@ set_package_properties(hbrs-cmake PROPERTIES
 
 # Hana is part of boost since 1.61, Ref.: http://www.boost.org/users/history/
 # BOOST_TEST macro requires 1.59, Ref.: https://stackoverflow.com/a/38083784/6490710
-find_package(Boost 1.61 REQUIRED COMPONENTS unit_test_framework system thread serialization chrono program_options filesystem iostreams regex exception signals)
+# boost::hana::overload_linearly with single argument is supported since boost 1.62, Ref.: https://github.com/boostorg/hana/commit/89755947faffc56ff76ef3eecca0430191e976b8
+find_package(Boost 1.62 REQUIRED COMPONENTS unit_test_framework system thread serialization chrono program_options filesystem iostreams regex exception signals)
 set_package_properties(Boost PROPERTIES
     PURPOSE "Required for meta programming, unit tests and others."
     TYPE REQUIRED
