Added MPI as a required dependency in CMake config
MPI is required to build e.g. src/hbrs/mpl/detail/mpi.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,9 +60,10 @@ set_package_properties(OpenMP PROPERTIES
     PURPOSE "Required for addon elemental."
 )
 
-find_package(MPI)
+find_package(MPI REQUIRED)
 set_package_properties(MPI PROPERTIES
-    PURPOSE "Required for addon elemental."
+    PURPOSE "Required for distributed computations, e.g. in addon elemental."
+    TYPE REQUIRED
 )
 
 find_package(Matlab COMPONENTS MAIN_PROGRAM)
