Fix dependency handling in exported *.cmake config
Only find dependencies in hbrs-mpl-config.cmake[.in]
which were present and found during build.

--- a/hbrs-mpl-config.cmake.in
+++ b/hbrs-mpl-config.cmake.in
@@ -19,14 +19,30 @@ check_required_components(hbrs-mpl)
 
 # NOTE: Keep list of dependencies in sync with packages in CMakeLists.txt!
 include(CMakeFindDependencyMacro)
-#find_dependency(hbrs-cmake REQUIRED)
-find_dependency(Boost 1.62 REQUIRED COMPONENTS unit_test_framework system thread serialization chrono program_options filesystem iostreams regex exception signals)
-find_dependency(LAPACK)
-find_dependency(LAPACKE)
-find_dependency(OpenMP)
-find_dependency(MPI)
-find_dependency(Matlab COMPONENTS MAIN_PROGRAM)
-find_dependency(Elemental)
+#if(@hbrs-cmake_FOUND@)
+#    find_dependency(hbrs-cmake REQUIRED)
+#endif()
+if(@Boost_FOUND@)
+    find_dependency(Boost 1.62 REQUIRED COMPONENTS unit_test_framework system thread serialization chrono program_options filesystem iostreams regex exception signals)
+endif()
+if(@LAPACK_FOUND@)
+    find_dependency(LAPACK)
+endif()
+if(@LAPACKE_FOUND@)
+    find_dependency(LAPACKE)
+endif()
+if(@OpenMP_FOUND@)
+    find_dependency(OpenMP)
+endif()
+if(@MPI_FOUND@)
+    find_dependency(MPI)
+endif()
+if(@Matlab_FOUND@)
+    find_dependency(Matlab COMPONENTS MAIN_PROGRAM)
+endif()
+if(@Elemental_FOUND@)
+    find_dependency(Elemental)
+endif()
 
 
 
