Continued major project restructuring and overhaul [23]
Python 3 script now also generates CMake entries for function
implementations stored in impl.cpp files. Previously only sources
located in the impl/ subdirectories where enumerated.

Updated CMakeLists.txt to include new and sorted impls.

--- a/src/hbrs/mpl/detail/CMakeLists.txt
+++ b/src/hbrs/mpl/detail/CMakeLists.txt
@@ -7,8 +7,10 @@
 #################### list the subdirectories ####################
 
 add_subdirectory(are_same)
+add_subdirectory(environment)
 add_subdirectory(index_of)
 add_subdirectory(is_braces_constructible)
 add_subdirectory(is_core_applicable)
 add_subdirectory(matlab_cxn)
+add_subdirectory(mpi)
 add_subdirectory(operators)
