--- a/src/hbrs/mpl/dt/ctsav/CMakeLists.txt
+++ b/src/hbrs/mpl/dt/ctsav/CMakeLists.txt
@@ -4,6 +4,11 @@
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 #
 
+#################### build ####################
+
+target_sources(hbrs_mpl PRIVATE
+    impl.cpp)
+
 #################### tests ####################
 
 hbrs_mpl_add_test(dt_ctsav "test.cpp")
