--- a/src/hbrs/mpl/fn/power/impl/CMakeLists.txt
+++ b/src/hbrs/mpl/fn/power/impl/CMakeLists.txt
@@ -7,5 +7,5 @@
 #################### build ####################
 
 target_sources(hbrs_mpl PRIVATE
-    std.cpp
-    elemental.cpp)
+    elemental.cpp
+    std.cpp)
