Continued major project restructuring and overhaul [26]
Added CMake target matlab_cxn as a public link library to target
hbrs_mpl. As an interface link library, as it was before, its include
directories of e.g. MATLAB headers were not added to target hbrs_mpl and
thus compilation failed.

--- a/src/hbrs/mpl/detail/matlab_cxn/impl/CMakeLists.txt
+++ b/src/hbrs/mpl/detail/matlab_cxn/impl/CMakeLists.txt
@@ -107,7 +107,7 @@ target_include_directories(matlab_cxn
         $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/src>
         $<INSTALL_INTERFACE:${HBRS_MPL_INSTALL_INCLUDEDIR}/${matlab_cxn_includedir}>)
 
-target_link_libraries(hbrs_mpl INTERFACE matlab_cxn)
+target_link_libraries(hbrs_mpl PUBLIC matlab_cxn)
 
 #################### install files ####################
 
