Continued major project restructuring and overhaul [29]
Fixed matlab function implementations and unit tests.

Moved operator[] implementation of ml_matrix into separate impl.cpp
file. Because ml_matrix<> is specialized for bool and double, compilers
will immediately try to instantiate the function bodies, if defined
inline/in-class. If definitions, used within function bodies, are not
defined yet, e.g. because of circular dependencies, then the compilation
fails.

--- a/src/hbrs/mpl/dt/CMakeLists.txt
+++ b/src/hbrs/mpl/dt/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(ctsav)
 add_subdirectory(escsv)
 add_subdirectory(exception)
 add_subdirectory(functor)
+add_subdirectory(ml_matrix)
 add_subdirectory(range)
 add_subdirectory(rtsam)
 add_subdirectory(rtsav)
