Continued major project restructuring and overhaul [37]
Fixed package imports in CMake files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ endif()
 
 if(HBRS_MPL_ENABLE_MEMCHECK)
     find_package(VALGRIND)
-    set_package_properties(Elemental PROPERTIES
+    set_package_properties(VALGRIND PROPERTIES
         PURPOSE "Required for tests."
         TYPE REQUIRED)
 endif()
