Added 'Normalize' option to all PCA impls
If pca_control::center and pca_control::normalize are set to true at the same
time, the input matrix is centered (column mean is 0) and normalized (standard
deviation along columns is 1). Then, pca() returns the principal components
based on the correlation matrix instead of the convariance matrix.

Added variance() function to compute variances along e.g. columns of a matrix.

Added rdivide() function for right array division.

--- a/src/hbrs/mpl/fn/CMakeLists.txt
+++ b/src/hbrs/mpl/fn/CMakeLists.txt
@@ -34,6 +34,7 @@ add_subdirectory(pca)
 add_subdirectory(pca_filter)
 add_subdirectory(plus)
 add_subdirectory(power)
+add_subdirectory(rdivide)
 add_subdirectory(recurse)
 add_subdirectory(rows)
 add_subdirectory(second)
@@ -45,6 +46,7 @@ add_subdirectory(svd)
 add_subdirectory(times)
 add_subdirectory(transform)
 add_subdirectory(transpose)
+add_subdirectory(variance)
 add_subdirectory(vertcat)
 add_subdirectory(where)
 add_subdirectory(zip)
