Refactored givens() rotation function and expressions
The givens() impl. for doubles now returns a givens_result instead of
an ambiguous std::array<> object.

--- a/src/hbrs/mpl/fn/CMakeLists.txt
+++ b/src/hbrs/mpl/fn/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(first)
 add_subdirectory(fold1)
 add_subdirectory(fold1_left)
 add_subdirectory(fold_left)
+add_subdirectory(givens)
 add_subdirectory(if)
 add_subdirectory(insert)
 add_subdirectory(invoke)
