--- a/src/hbrs/mpl/fn/CMakeLists.txt
+++ b/src/hbrs/mpl/fn/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(fold1)
 add_subdirectory(fold1_left)
 add_subdirectory(fold_left)
 add_subdirectory(givens)
+add_subdirectory(house)
 add_subdirectory(if)
 add_subdirectory(insert)
 add_subdirectory(invoke)
