Refactored svd() impl. for rtsam and adapted unittests

--- a/src/hbrs/mpl/fn/svd/impl/CMakeLists.txt
+++ b/src/hbrs/mpl/fn/svd/impl/CMakeLists.txt
@@ -7,5 +7,6 @@
 #################### build ####################
 
 target_sources(hbrs_mpl PRIVATE
+    hbrs_mpl.cpp
     elemental.cpp
     matlab.cpp)
