--- a/src/hbrs/mpl/fn/CMakeLists.txt
+++ b/src/hbrs/mpl/fn/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(columns)
 add_subdirectory(contains)
 add_subdirectory(diag)
 add_subdirectory(divide)
+add_subdirectory(equal)
 add_subdirectory(expand)
 add_subdirectory(first)
 add_subdirectory(fold1)
