--- a/src/hbrs/mpl/detail/CMakeLists.txt
+++ b/src/hbrs/mpl/detail/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(is_core_applicable)
 add_subdirectory(matlab_cxn)
 add_subdirectory(mpi)
 add_subdirectory(operators)
+add_subdirectory(test)
