Added new functions complex(), dmd(), eig(), inverse() and mldivide()
Functions are mostly identical to their equally-named counterparts in MATLAB.
Note, inverse() is called inv() in MATLAB.

Wrote impls and unit tests (partially) for Elemental and MATLAB wrappers.

--- a/src/hbrs/mpl/fn/CMakeLists.txt
+++ b/src/hbrs/mpl/fn/CMakeLists.txt
@@ -14,9 +14,12 @@ add_subdirectory(apply_at)
 add_subdirectory(at)
 add_subdirectory(bidiag)
 add_subdirectory(columns)
+add_subdirectory(complex)
 add_subdirectory(contains)
 add_subdirectory(diag)
 add_subdirectory(divide)
+add_subdirectory(dmd)
+add_subdirectory(eig)
 add_subdirectory(equal)
 add_subdirectory(expand)
 add_subdirectory(first)
@@ -27,11 +30,13 @@ add_subdirectory(givens)
 add_subdirectory(house)
 add_subdirectory(if)
 add_subdirectory(insert)
+add_subdirectory(inverse)
 add_subdirectory(invoke)
 add_subdirectory(iterate)
 add_subdirectory(m)
 add_subdirectory(mean)
 add_subdirectory(minus)
+add_subdirectory(mldivide)
 add_subdirectory(multiply)
 add_subdirectory(n)
 add_subdirectory(pca)
