Added sort() function, two impls to sort results from eig() and unit tests
Eigenvalues and eigenvectors might be complex, thus eig() impls return them
unsorted. To be able to compare results from different eig() implementations,
we sort all eigenvalues based on their 2-norm. Eigenvectors, which are stored
as matrix columns, are sorted with the same ordering as their corresponding
eigenvalues. Both eigenvalues and eigenvectors of different eig() impls are
then compared based on their 2-norm a.k.a. absolute values.

--- a/src/hbrs/mpl/fn/CMakeLists.txt
+++ b/src/hbrs/mpl/fn/CMakeLists.txt
@@ -50,6 +50,7 @@ add_subdirectory(second)
 add_subdirectory(select)
 add_subdirectory(signum)
 add_subdirectory(size)
+add_subdirectory(sort)
 add_subdirectory(sum)
 add_subdirectory(svd)
 add_subdirectory(times)
