--- a/src/hbrs/mpl/detail/CMakeLists.txt
+++ b/src/hbrs/mpl/detail/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(environment)
 add_subdirectory(index_of)
 add_subdirectory(is_braces_constructible)
 add_subdirectory(is_core_applicable)
+add_subdirectory(log)
 add_subdirectory(matlab_cxn)
 add_subdirectory(mpi)
 add_subdirectory(operators)
