Fixed install include directories in CMake exports

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,7 +165,7 @@ include(GNUInstallDirs)
 # Offer a choice of overriding the installation directories
 set(HBRS_MPL_INSTALL_BINDIR      ${CMAKE_INSTALL_BINDIR}                               CACHE PATH "install dir for executables")
 set(HBRS_MPL_INSTALL_LIBDIR      ${CMAKE_INSTALL_LIBDIR}                               CACHE PATH "install dir for libraries")
-set(HBRS_MPL_INSTALL_INCLUDEDIR  ${CMAKE_INSTALL_INCLUDEDIR}/hbrs/mpl                  CACHE PATH "install dir for headers")
+set(HBRS_MPL_INSTALL_INCLUDEDIR  ${CMAKE_INSTALL_INCLUDEDIR}                           CACHE PATH "install dir for headers")
 set(HBRS_MPL_INSTALL_CMAKEDIR    ${CMAKE_INSTALL_LIBDIR}/cmake/${CMAKE_PROJECT_NAME}   CACHE PATH "install dir for CMake files")
 
 set(HBRS_MPL_INSTALL_TARGETS_DEFAULT_DESTINATIONS
