Sync'ed dependencies in hbrs-mpl-config.cmake.in to CMakeLists.txt

--- a/hbrs-mpl-config.cmake.in
+++ b/hbrs-mpl-config.cmake.in
@@ -24,13 +24,18 @@ include(CMakeFindDependencyMacro)
 #    find_dependency(hbrs-cmake REQUIRED)
 #endif()
 if(@Boost_FOUND@)
-    find_dependency(Boost 1.62 REQUIRED COMPONENTS unit_test_framework system thread serialization chrono program_options filesystem iostreams regex exception signals)
+    find_dependency(Boost 1.62 REQUIRED COMPONENTS unit_test_framework system thread serialization chrono program_options filesystem iostreams regex exception log)
 endif()
-if(@LAPACK_FOUND@)
-    find_dependency(LAPACK)
-endif()
-if(@LAPACKE_FOUND@)
-    find_dependency(LAPACKE)
+if (@HBRS_MPL_ENABLE_MATLAB@)
+    if(@LAPACK_FOUND@)
+        find_dependency(LAPACK)
+    endif()
+    if(@LAPACKE_FOUND@)
+        find_dependency(LAPACKE)
+    endif()
+    if(@Matlab_FOUND@)
+        find_dependency(Matlab COMPONENTS MAIN_PROGRAM)
+    endif()
 endif()
 if(@OpenMP_FOUND@)
     find_dependency(OpenMP)
@@ -38,11 +43,10 @@ endif()
 if(@MPI_FOUND@)
     find_dependency(MPI)
 endif()
-if(@Matlab_FOUND@)
-    find_dependency(Matlab COMPONENTS MAIN_PROGRAM)
-endif()
-if(@Elemental_FOUND@)
-    find_dependency(Elemental)
+if (@HBRS_MPL_ENABLE_ELEMENTAL@)
+    if(@Elemental_FOUND@)
+        find_dependency(Elemental)
+    endif()
 endif()
 # NOTE: VALGRIND is only used during build
 #if(@VALGRIND_FOUND@)
