--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,8 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # C++17 is required for constexpr lambdas, if constexpr(...), constexpr std::array, inline variables, class template argument deduction, std::is_invocable, std::void_t
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 
 # "CMake will generate tests only if the enable_testing() command has been invoked." [1]
 # "Note that ctest expects to find a test file in the build directory root. Therefore, this command should be in the 
